Changes
=======

1.4.2 (2017-10-02)
------------------

 * slapos.collect: Make internal API usable as library for third parties

1.4.1 (2017-09-25)
------------------

 * slapos.format: Introduce create_tun config option (default false)
 * slapos.cli: get template directly and not reply on namespaces for register
 * slapos.grid: add pluging which run instance custom script at partition pre-destroy phase

1.4.0 (2017-06-26)
------------------

  * slapos.grid: Use local configuration to extend master configuration
  * slapos.format: Export partition configuration for the partition
  * slapos: improve logs and general cleanup
  * slapos.manager: Added cpuset plugin (for cgroups)
  * slapos.format: Add TUN interface support
  * slapos: Implement plugin system

1.3.18 (2016-11-03)
-------------------

 * update default web url of master to slapos.vifib.com

1.3.17 (2016-10-25)
-------------------

 * slapos.grid: Always remove .timestamp and .slapgrid if partition is destroyed.
 * slapos.proxy: Propagate parent partition state to children
 * slapos.grid: Increase min space (1G)
 * slapos.grid: Save slapgrid state into the partition
 * slapos.format: Remove passwd call while format.
 * svcbackend: explicitely call the executable instead of using Popen 'executable' keyword.
 * slapos.grid: Introduce new garbage collector for instances ignored by buildout 

1.3.16 (2016-09-29)
-------------------
 * slapos.format: Include disk usage report. Do not divide cpu_load by number of cpu cores.
 * slapos.format: set login shell for slapuser and lock login by password
 * slapos.slap: Do not post same connection parameters of slaves.
 * slapos.proxy: allow to update software release of partition

1.3.15 (2015-12-08)
-------------------
 * slapos.collect: Include disk usage report. Do not divide cpu_load by number of cpu cores.

1.3.14 (2015-10-27)
-------------------
 * slapos.grid: firewall fix bugs

1.3.13 (2015-10-26)
-------------------